# rpguide

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  create_icon.py  main.py  opencode.json  pyproject.toml  requirements.txt  rpguide.spec  run_tests.py
.continue/rules/: CONTINUE.md  git.md  python.md  review.md  review_strict.md  terminal.md  testing.md  workflow.md
.opencode/skills/master-workflow/: SKILL.md
.opencode/skills/python-agent-core/: SKILL.md
.opencode/skills/python-execution-model/: SKILL.md
.opencode/skills/python-fail-safe/: SKILL.md
.opencode/skills/python-git-discipline/: SKILL.md
.opencode/skills/python-regression-check/: SKILL.md
.opencode/skills/python-safe-development/: SKILL.md
.opencode/skills/python-security-policy/: SKILL.md
.opencode/skills/python-testing-policy/: SKILL.md
.opencode/skills/python-validation/: SKILL.md
.opencode/skills/python-windows-compatibility/: SKILL.md
modules/: configs.py  connectors_manager.py  docs_manager.py  gui_app.py  prompts_manager.py  setup_app.py
modules/connectors/: anthropic_connector.py  gemini_connector.py  lmstudio_connector.py  ollama_connector.py  openai_connector.py
modules/prompts/: analyzer_en_us.txt  analyzer_pt_br.txt  human_en_us.txt  human_pt_br.txt  system_en_us.txt  system_pt_br.txt
terminal/: app.py
tests/: __init__.py  requirements.txt  test_configs.py  test_connectors_manager.py  test_file_upload.py  test_main.py  test_prompt_analyzer.py  test_prompts_manager.py
texts/: en_us.properties  pt_br.properties
